resolve a task by using object and array

--- a/sellTicket/indext.html
+++ b/sellTicket/indext.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>open the console to see the result</h1>
-    <script src="./taskManagment.js"></script>
+    <script src="./sellTicket.js"></script>
 </body>
 </html>
