--- a/uploadpic/index.html
+++ b/uploadpic/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>open the console to see the result</h1>
-    <script src="./timer.js"></script>
+    <script src="./uploadPicture.js"></script>
 </body>
 </html>
